# codesnip

./: .gitignore  README.md
simple_ffmpeg_player/: CMakeLists.txt  README.md  SDL_Player.cpp  decoder.cpp
socket_programming/: CMAKE_README.md  CMakeLists.txt  Makefile  README.md  Readme.md  chat_multheadclient.cpp  chat_multheadserv.cpp  echo_EPELserv.cpp  echo_client.cpp  echo_epollserv.cpp  echo_mpclient.cpp  echo_mpserv.cpp  echo_multheadserv.cpp  echo_selectserv.cpp  echo_server.cpp  getaddrinfo.cpp  gethostbyaddr.cpp  gethostbyname.cpp  getnameinfo.cpp  hello.txt  hello_client.cpp  hello_server.cpp  index.html  news_receiver.cpp  news_receiver_brd.cpp  news_sender.cpp  news_sender_brd.cpp  op_client.cpp  op_server.cpp  remove_zombie.cpp  webserv_get.cpp
